# xdf2mne

./: README.md  example.py  pyproject.toml  xdf2mne.py
src/xdf2mne/: xdf2mne.py
xdf2mne/: example.py
