[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "xdf2mne"
version = "1.2"
authors = [
  { name="Jan Zerfowski", email="research@janzerfowski.de" },
]
description = "Package to read .xdf files with pyxdf and transform them into mne.RawArrays"
readme="README.md"
requires-python = ">=3.8"
dependencies = [
    "pyxdf",
    "numpy",
    "scipy",
    "mne",
]